fix word wrap for demo, fix #164

--- a/examples/assets/sass/editor.scss
+++ b/examples/assets/sass/editor.scss
@@ -4,6 +4,9 @@
   margin: 0 auto 5rem auto;
 
   &__content {
+
+    word-wrap: break-word;
+
     pre {
       padding: 0.7rem 1rem;
       border-radius: 5px;
